--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+
+* {box-sizing: border-box;}
+
+.wrapper {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  max-width: 1170px;
+  margin: 0px auto;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-areas:
+    "header"
+    "nav"
+    "content";
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.wrapper > * {
+  border: 2px solid #ffc07c;
+  background-color: #fff2e1;
+  border-radius: 5px;
+  padding: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  flex-direction: row;
 }
 
-.App-link {
-  color: #61dafb;
+@media (min-width: 700px) {
+  .wrapper {
+    grid-template-columns: 1fr 5fr;
+    grid-template-areas: 
+      "header header"
+      "nav    content";
+    grid-gap: 20px;
+
+  }
+  nav {
+    flex-direction: column;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content {
+  grid-area: content;
 }
