--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 
 * {box-sizing: border-box;}
 
@@ -39,9 +39,12 @@ nav {
   }
   nav {
     flex-direction: column;
+    justify-content: flex-start;
   }
 }
 
 .content {
   grid-area: content;
+  padding: 10px;
+  min-height: 60vh;
 }
