add react-content-loader for Users

--- a/src/components/Users/UsersContainer.module.css
+++ b/src/components/Users/UsersContainer.module.css
@@ -2,8 +2,9 @@
   display: flex;
   list-style-type: none;
   cursor: pointer;
-  margin: 20px;
-  padding: 20px;
+  margin: 0;
+  padding: 10px;
+  justify-content: center;
 }
 
 .break {
